--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "floorplan-worker",
-  "version": "0.1.0",
+  "name": "floorplan-editor",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "build": "wrangler deploy --dry-run",
@@ -8,7 +8,7 @@
     "dev": "wrangler dev"
   },
   "dependencies": {
-    "@google/genai": "^1.27.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240512.0",
