--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,10 @@
-name = "floorplan-photo-editor"
-main = "src/worker.ts"
-compatibility_date = "2024-10-02"
-compatibility_flags = ["nodejs_compat"]
+name = "floorplan-editor"
+main = "src/index.ts"
+compatibility_date = "2025-10-23"
+
+[images]
+binding = "IMAGES"
 
 [vars]
-GEMINI_MODEL = "gemini-2.5-flash-image-preview"
-SYSTEM_PROMPT = "You are an AI Orchestrator Worker that manages Gemini image generation and editing for architectural floor plans and interior/exterior photos. You handle upload, transformation, and conversational edits using Gemini's multimodal image API. All images are stored and served from Cloudflare Images, and you maintain a structured version history for every session."
-
-[[d1_databases]]
-binding = "DB"
-database_name = "floorplan-photo-editor"
-database_id = "00000000-0000-0000-0000-000000000000"
+ACCOUNT_ID = "xxxxx"
+IMAGES_ACCOUNT_BASE = "https://api.cloudflare.com/client/v4/accounts/xxxxx/images/v1"
