--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "floorplan-react"
-main = "src/worker.ts"
+main = "src/index.ts"
 compatibility_date = "2024-10-02"
 compatibility_flags = ["nodejs_compat"]
 
